k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ponto-digital
  labels:
    app: ponto-digital
